--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,7 @@ build-iPhoneSimulator/
 
 # Used by RuboCop. Remote config files pulled in from inherit_from directive.
 # .rubocop-https?--*
+
+
+# Custom Files
+tba_basic_operations.rb
